<resources>
    <string name="app_name">Электронный Дневник</string>

    <!-- Actions and Buttons -->
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>

    <string name="attach_pupil_card">Для выставления оценки приложите карту ученика.</string>
    <string name="unknown_teacher_card">Учитель с такой картой не найден!</string>
    <string name="attach_teacher_card">Приложите карту для входа в систему.</string>
    <string name="no_rfid_readers">Считыватель не найден!</string>
    <string name="rfid_reader_found">Считыватель подключен.</string>
    <string name="title_activity_login">Войти</string>

    <!-- Card -->
    <string name="attach_card">Приложите карту для входа в кабинет</string>
    <!-- Strings related to login -->
    <string name="sign_in">Вход</string>
    <string name="choose_admin">Я администратор</string>
    <string name="choose_teacher">Я учитель</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>

    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Этот e-mail невалиден!</string>
    <string name="error_invalid_password">Очень короткий пароль!</string>
    <string name="error_incorrect_password">Невалидный пароль!</string>
    <string name="error_field_required">Обязательное поле!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <!-- Strings related to pupil and teacher  -->
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="card_uid">ID карты</string>
    <string name="avatar">Аватар</string>

    <!-- Teacher -->
    <string name="teacher">Учитель</string>

    <!-- Administrator -->
    <string name="admin">Администратор</string>
    <string name="add_pupil">Добавить ученика</string>
    <string name="add_subject">Добавить предмет</string>
    <string name="add_teacher">Добавить ученика</string>
    <string name="add_schedule">Добавить расписание</string>

    <!-- Strings related to school -->
    <string name="subject">Предмет</string>
    <string name="school_class">Класс</string>
    <string name="score_type">Тип оценки</string>
    <string name="class_work">Классная работа</string>
    <string name="home_work">Домашняя работа</string>
    <string name="test_work">Тестовая работа</string>
    <string name="score">Оценка</string>

    <!-- Locations names -->
    <string name="location_main">Главная</string>
    <string name="location_pupil">Выставление оценки</string>
    <string name="location_class">Ученики</string>
    <string name="location_schedule">Расписание</string>
    <string name="location_profile">Мой профиль</string>
    <string name="location_add_pupil">Добавить ученика</string>
    <string name="location_add_subject">Добавить предмет</string>
    <string name="admin_location_teachers">Учителя</string>
    <string name="admin_location_pupils">Ученики</string>
    <string name="admin_location_subjects">Предметы</string>
    <string name="admin_location_schedule">Расписание</string>

    <!-- Strings for tests -->
    <string name="received_uids">Найдены карты:</string>
    <string name="avatar_path">Путь к аватару:</string>
</resources>
