<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anastasiya.arduinoserialcom.AddPupilActivity">

    <TextView
        android:id="@+id/label_create_surname"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/input_create_surname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/label_create_surname"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text" />


    <TextView
        android:id="@+id/label_create_name"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/input_create_surname"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/input_create_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/label_create_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_create_patronymic"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/input_create_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/patronymic" />

    <EditText
        android:id="@+id/input_create_patronymic"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/label_create_patronymic"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_create_class"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/input_create_patronymic"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="170dp"
        android:text="@string/school_class" />

    <EditText
        android:id="@+id/input_create_class"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/label_create_class"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="170dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_create_card"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/input_create_class"
        android:layout_alignStart="@+id/input_create_class"
        android:layout_below="@+id/input_create_class"
        android:layout_marginRight="170dp"
        android:text="@string/card_uid" />

    <EditText
        android:id="@+id/input_create_card"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/label_create_card"
        android:layout_alignStart="@+id/label_create_card"
        android:layout_below="@+id/label_create_card"
        android:layout_marginRight="170dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_create_avatar"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/avatar"
        android:layout_below="@+id/input_create_patronymic"
        android:layout_above="@+id/input_create_class"
        android:layout_alignRight="@+id/input_create_patronymic"
        android:layout_alignEnd="@+id/input_create_patronymic"
        android:layout_alignLeft="@+id/image_add_pupil"
        android:layout_alignStart="@+id/image_add_pupil" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_add_pupil_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/label_create_avatar"
        android:layout_alignLeft="@+id/label_create_avatar"
        android:layout_alignStart="@+id/label_create_avatar" />

    <ImageView
        android:id="@+id/image_add_pupil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/avatar"
        app:srcCompat="@mipmap/ic_person_black_24dp"
        android:layout_below="@+id/label_create_avatar"
        android:layout_alignRight="@+id/input_create_patronymic"
        android:layout_alignEnd="@+id/input_create_patronymic" />

    <Button
        android:id="@+id/button_create_pupil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_create_pupil"
        android:layout_alignLeft="@+id/cancel_create_pupil"
        android:layout_alignStart="@+id/cancel_create_pupil"
        android:background="@color/colorPrimary"
        android:onClick="CreatePupil"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/cancel_create_pupil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
