<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anastasiya.arduinoserialcom.AdminLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="24sp"
        android:id="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/prompt_login"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/prompt_password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/action_sign_in_short"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>
