<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anastasiya.arduinoserialcom.TeacherProfileActivity">

    <ImageView
        android:id="@+id/image_teacher"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvTClass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/background"
        android:baselineAlignBottom="true"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/tvTSurname"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        android:layout_alignLeft="@+id/image_teacher"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/image_teacher"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/surname" />

    <TextView
        android:id="@+id/tvTName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/tvTSurname"
        android:layout_alignBottom="@+id/tvTSurname"
        android:layout_toEndOf="@+id/tvTSurname"
        android:layout_toRightOf="@+id/tvTSurname"
        android:paddingLeft="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/tvTName"
        android:layout_alignBottom="@+id/tvTName"
        android:layout_toEndOf="@+id/tvTName"
        android:layout_toRightOf="@+id/tvTName"
        android:paddingLeft="10dp"
        android:text="@string/patronymic"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

   <!-- <TextView
        android:id="@+id/tvTSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_teacher"
        android:layout_alignStart="@+id/image_teacher"
        android:layout_below="@+id/tvTSurname"
        android:layout_centerVertical="false"
        android:layout_marginTop="5dp"
        android:text="@string/subject"
        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/tvTClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_teacher"
        android:layout_alignStart="@+id/image_teacher"
        android:layout_below="@+id/tvTSurname"
        android:layout_margin="5dp"
        android:text="@string/school_class"
        android:textStyle="bold" />

</RelativeLayout>
