<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anastasiya.arduinoserialcom.PupilActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/image_pupil"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/tvTSubject"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tvTSubject"
        android:layout_toStartOf="@+id/tvTSubject"
        android:background="@drawable/background" />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/surname"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignBaseline="@+id/tvSurname"
        android:layout_alignBottom="@+id/tvSurname"
        android:layout_toEndOf="@+id/tvSurname"
        android:layout_toRightOf="@+id/tvSurname"
        android:paddingLeft="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:paddingLeft="10dp"
        android:text="@string/patronymic"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTSubject"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/btnMark4"
        android:layout_alignRight="@+id/btnMark4"
        android:layout_below="@+id/tvName"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/subject"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvScoreType"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/spMarkTypes"
        android:layout_toEndOf="@+id/image_pupil"
        android:layout_toRightOf="@+id/image_pupil"
        android:text="@string/score_type"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:text="@string/score"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_toRightOf="@+id/image_pupil"
        android:layout_toEndOf="@+id/image_pupil"
        android:layout_alignBottom="@+id/image_pupil" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_green_dark"
        android:text="@string/save"
        android:onClick="saveMark"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTSubject"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/image_pupil"
        android:layout_toRightOf="@+id/image_pupil" />

    <Spinner
        android:id="@+id/spMarkTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvScore"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/image_pupil"
        android:layout_toRightOf="@+id/image_pupil" />

    <Button
        android:id="@+id/btnMark1"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:onClick="setMark"
        android:text="1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnMark5"
        android:layout_alignTop="@+id/btnMark2" />

    <Button
        android:id="@+id/btnMark2"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_above="@+id/btnMark6"
        android:layout_toEndOf="@+id/btnMark1"
        android:layout_toRightOf="@+id/btnMark1"
        android:onClick="setMark"
        android:text="2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMark3"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/btnMark2"
        android:layout_alignTop="@+id/btnMark2"
        android:layout_toEndOf="@+id/btnMark2"
        android:layout_toRightOf="@+id/btnMark2"
        android:onClick="setMark"
        android:text="3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMark4"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_above="@+id/btnMark8"
        android:layout_toEndOf="@+id/btnMark3"
        android:layout_toRightOf="@+id/btnMark3"
        android:onClick="setMark"
        android:text="4"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMark5"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btnMark1"
        android:layout_alignStart="@+id/btnMark1"
        android:layout_toLeftOf="@+id/btnMark2"
        android:layout_toStartOf="@+id/btnMark2"
        android:onClick="setMark"
        android:text="5"
        android:textSize="24sp"
        android:layout_above="@+id/btnMark9"
        android:layout_below="@+id/btnMark4" />

    <Button
        android:id="@+id/btnMark6"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_toLeftOf="@+id/btnMark3"
        android:layout_toRightOf="@+id/btnMark1"
        android:layout_toStartOf="@+id/btnMark3"
        android:onClick="setMark"
        android:text="6"
        android:textSize="24sp"
        android:layout_above="@+id/btnMark9"
        android:layout_alignTop="@+id/btnMark5" />

    <Button
        android:id="@+id/btnMark7"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:onClick="setMark"
        android:text="7"
        android:textSize="24sp"
        android:layout_below="@+id/btnMark3"
        android:layout_toRightOf="@+id/btnMark2"
        android:layout_toEndOf="@+id/btnMark2" />

    <Button
        android:id="@+id/btnMark8"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:onClick="setMark"
        android:text="8"
        android:textSize="24sp"
        android:layout_above="@+id/btnMark10"
        android:layout_toRightOf="@+id/btnMark3"
        android:layout_alignRight="@+id/btnMark4"
        android:layout_alignEnd="@+id/btnMark4" />

    <Button
        android:id="@+id/btnMark9"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:onClick="setMark"
        android:text="9"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button"
        android:layout_toLeftOf="@+id/btnMark10"
        android:layout_toStartOf="@+id/btnMark10" />

    <Button
        android:id="@+id/btnMark10"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:onClick="setMark"
        android:text="10"
        android:textSize="24sp"
        android:layout_toRightOf="@+id/btnMark6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button"
        android:layout_alignTop="@+id/btnMark9" />

    <TextView
        android:id="@+id/tvScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/tvScore"
        android:layout_alignRight="@+id/btnMark4"
        android:layout_alignEnd="@+id/btnMark4"
        android:layout_alignBottom="@+id/tvScore"
        android:layout_alignTop="@+id/tvScore" />

</RelativeLayout>
